GNOME Bugzilla – Bug 715026
owncloud: Regular files are missing
Last modified: 2013-11-22 18:31:20 UTC
None of the regular files on the server show up in the UI. Only directories are visible. This is a "regression" caused by the following GVfs fix. We should now remove the workaround that we had. commit 2b251d69351312d632e41188d5f9f7cbf394331a Author: Ross Lagerwall <rosslagerwall@gmail.com> Date: Fri Oct 11 22:04:51 2013 +0200 dav: Set file type to regular by default Some servers send empty resourcetype nodes or don't send the node at all for regular files (the spec says that it defaults to empty). Set the file type to regular by default. https://bugzilla.gnome.org/show_bug.cgi?id=706798
Created attachment 261243 [details] [review] owncloud: Regular files are now correctly marked as such by GVfs
The fact that we should fix this GVfs bug was actually pointed out during the initial review, but I forgot about it: https://bugzilla.gnome.org/show_bug.cgi?id=706158#c8 Sorry about that.
Review of attachment 261243 [details] [review]: Looks good to me.
Comment on attachment 261243 [details] [review] owncloud: Regular files are now correctly marked as such by GVfs Thanks for the quick review!