owncloud: Regular files are now correctly marked as such by GVfs

https://bugzilla.gnome.org/show_bug.cgi?id=715026